# moex-agent

./: .gitignore  .replit  ARCHITECTURE.md  GROK_ANALYST_PROMPT.md  KNOWLEDGE_BASE.md  OPENAI_ANALYST_PROMPT.md  OPENAI_PROMPT.md  ORCHESTRATOR_PROMPT.md  PERPLEXITY_ANALYST_PROMPT.md  QUICK_START.md  QWEN_ANALYST_PROMPT.md  README.md  README_REPLIT.md  REPLIT_AI_PROMPT.md  REPLIT_ORCHESTRATOR_PROMPT.md  REPLIT_PROMPT.md  REPLIT_SETUP.md  REPLIT_TASK_TRADES.md  REPLIT_TRAINING_PROMPT.md  SETUP.md  TRAINING_GUIDE.md  YANDEXGPT_ANALYST_PROMPT.md  YANDEX_CLOUD_PROMPT.md  YANDEX_CLOUD_SETUP.md  com.moex-agent.plist  config.backup.yaml  config.example.yaml  config.yaml  config.yaml.replit  main.py  pyproject.toml  replit.nix  requirements.txt
data/: analysis_output.txt  deep_analysis.json  deep_analysis.txt  margin_paper_state.json  paper_trading_state.json
db/: schema.sql
deploy/: DEPLOY_YANDEX.md  Dockerfile  docker-compose.yml  yandex-deploy.sh
models/: meta.json  model_time_10m.joblib  model_time_1d.joblib  model_time_1h.joblib  model_time_1w.joblib  model_time_30m.joblib  model_time_5m.joblib  optimal_params.json
moex_agent/: __init__.py  __main__.py  advanced_train.py  anomaly.py  backtest.py  bcs_broker.py  bootstrap.py  config.py  config_schema.py  dashboard.py  db_state.py  deep_analysis.py  engine.py  features.py  init_db.py  labels.py  live.py  logging_config.py  margin_paper_trading.py  margin_risk_engine.py  moex_iss.py  optimize_train.py  orchestrator.py  paper_trading.py  perplexity.py  predictor.py  quick_backtest.py  qwen.py  risk.py  risk_manager.py  (+6 more)
(+14 files in other folders)
